--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "description": "",
   "devDependencies": {
     "mocha": "^8.3.2"
+  },
+  "dependencies": {
+    "@types/react-router-dom": "^5.1.7",
+    "react-router-dom": "^5.2.0"
   }
 }
