--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "mocha": "^8.3.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@types/react-router-dom": "^5.1.7",
+    "moment": "^2.29.1",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0"
   }
 }
