--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "axios": "^0.16.2"
   },
   "scripts": {
     "start": "react-scripts start",
