--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: "dasdd-client"
-          environment_name: "dasdd-client-env"
+          application_name: "fit4002-dasdd-client"
+          environment_name: "fit4002-dasdd-client-env"
           version_label: 1
           region: "ap-southeast-2"
           deployment_package: deploy.zip
