--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/react-calendar": "^3.1.4",
+    "@types/react-geocode": "^0.2.0",
     "@types/react-router-dom": "^5.1.7"
   },
   "proxy": "http://localhost:5000/"
