--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-geocode": "^0.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-styleguidist": "^11.1.7",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
