--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-calendar": "^3.4.0",
+    "react-clamp-lines": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-router-dom": "^5.2.0",
