Updated ci.yml to include tests for client dashboard
Removed install_dependencies as it was redundant. Install dependencies is now part of the test_client_dashboard job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,19 +2,25 @@ name: FIT4002 DASDD Client CI
 
 on: [push, pull_request, workflow_dispatch]
 
-jobs:
-  install_dependencies:
-    name: Install dependencies
+jobs: 
+  test_client_dashboard:
+    name: Test client side functionalities
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - run: npm install
+      - name: Test using Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+      - run: yarn install
         working-directory: ./client
+      - run: yarn test
+        working-directory: ./client
+      
   publish:
     name: Publish Images to Docker Hub
     needs:
-      - install_dependencies
+      - test_client_dashboard
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     steps:
@@ -34,7 +40,7 @@ jobs:
   deploy:
     name: Deploy to AWS Elastic Beanstalk
     needs:
-      - install_dependencies
+      - test_client_dashboard
       - publish
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
